--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-h5py==3.1.0
-librosa==0.10.2.post1
+h5py
+librosa
 matplotlib==3.9.4
 moviepy==1.0.3
 nilearn==0.9.2
-numpy==1.26.4
-pandas==1.5.1
+numpy
+pandas
 pytorchvideo==0.1.5
-scikit-learn==1.1.1
-scipy==1.12.0
-torch==1.13.0
+scikit-learn
+scipy
+torch
 tqdm==4.64.1
-torchvision==0.14.0
-transformers==4.51
+#torchvision==0.14.0
+#transformers==4.51
+voxelwise_tutorials
